# pdf2md

./: .cursorignore  .env.tmpl  .gitignore  .pylintrc  LICENSE  Makefile  README.md  pyproject.toml  pytest.ini
.cursor/rules/: python-developer.mdc  python-type-hints.mdc  uv-dependency-manager.mdc
.github/workflows/: lint.yml
src/: evaluate.py  run.py
src/parsers/: __init__.py  anthropic.py  base.py  googleai.py  huggingface.py  markitdown.py  mistral.py  ollama.py  openai.py  textract.py  unstructuredio.py
src/utils/: logging.py
tests/: conftest.py  test_base.py  test_evaluate.py  test_integration.py  test_run.py
